src/test/ui/regions/region-multiple-lifetime-bounds-on-fns-where-clause.stderr
error[E0623]: lifetime mismatch
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:9:10
   |
LL | fn b<'a, 'b, 'c>(x: &mut &'a isize, y: &mut &'b isize, z: &mut &'c isize) {
   |                          ---------          --------- these two types are declared with different lifetimes...
LL |     // Illegal now because there is no `'b:'a` declaration.
LL |     *x = *y;
   |          ^^ ...but data from `y` flows into `x` here

error[E0623]: lifetime mismatch
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:10:10
   |
LL | fn b<'a, 'b, 'c>(x: &mut &'a isize, y: &mut &'b isize, z: &mut &'c isize) {
   |                                             ---------          ---------
   |                                             |
   |                                             these two types are declared with different lifetimes...
...
LL |     *z = *y;
   |          ^^ ...but data from `y` flows into `z` here

error[E0623]: lifetime mismatch
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:16:7
   |
LL | fn c<'a,'b, 'c>(x: &mut &'a isize, y: &mut &'b isize, z: &mut &'c isize) {
   |                         ---------          --------- these two types are declared with different lifetimes...
...
LL |     a(x, y, z);
   |       ^ ...but data from `y` flows into `x` here

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:56
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |                                                        ^
   |
   = note: first, the lifetime cannot outlive any other region...
   = note: ...but the lifetime must also be valid for any other region...
note: ...so that the expression is assignable
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:56
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |                                                        ^
   = note: expected `for<'r, 's, 't0, 't1, 't2, 't3> fn(&'r mut &'s isize, &'t0 mut &'t1 isize, &'t2 mut &'t3 isize)`
              found `for<'r, 's, 't0> fn(&'r mut &isize, &'s mut &isize, &'t0 mut &isize)`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0495, E0623.
For more information about an error, try `rustc --explain E0495`.
